@@ -3,6 +3,7 @@
 x.x:
 
 - added: menu_builder special context to the input/access exceptions
+- fixed: group_tools default access was causing problems
 
 1.0 (2013-07-31):
 
